<!--
    * Copyright (C) 2018 by George Vrynios
    * GV 21/02/2018
    *
    * Project: how to prevent your Sensitive Data (like API keys) from publishing on GitHub repos
    *
    * Licensed under the Apache License, Version 2.0 (the "License");
    * you may not use this file except in compliance with the License.
    * You may obtain a copy of the License at
    *
    * http://www.apache.org/licenses/LICENSE-2.0
    *
    * Unless required by applicable law or agreed to in writing, software
    * distributed under the License is distributed on an "AS IS" BASIS,
    * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    * See the License for the specific language governing permissions and
    * limitations under the License.
-->

<resources>
    <string name="app_name">Sensitive Data Guide</string>

    <string name="constant_fields">Constant Fields</string>
    <string name="string_resources">String Resources</string>

    <string name="the_movie_db_org_api_key">The Movie DB org API_KEY</string>
    <string name="facebook_app_id">Facebook App Id</string>
    <string name="gmail_credential_username">GMail Username</string>
    <string name="gmail_credential_password">GMail Password</string>
</resources>
